# roy

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  LABEL_ONBOARDING_PLAN.md  MULTI_TENANT_ARCHITECTURE.md  REPRISE_DE_ZERO.md  VERCEL_DEPLOY.md  add_scope_to_advances.sql  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test_api.sh  test_notifications.py  test_parser.py  test_promo_api.sh  whales_logo_base64.txt  whales_logo_base64_oneline.txt
alembic/: env.py
app/: main.py
desktop-app/: .gitignore  README.md  generate-icons.sh  package-lock.json  package.json
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src-tauri/src/: main.rs
docs/: AUDIT_HEURISTIQUE.md  ROYALTIES_SIMPLE.md  ROYALTIES_WIREFRAME.md  SIGNUP_WIREFRAME.md  UX_GUIDE.md  UX_PRINCIPLES.md
frontend/: .env.local.example  .env.production  .gitignore  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend-artist/: .env.production  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend-backup/: .env.local.example  package-lock.json  package.json  tailwind.config.ts
frontend-signflow/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend-v2/: .dockerignore  .env.production  tailwind.config.ts
mobile-admin/: App.tsx  TESTFLIGHT.md  app.json  eas.json  package-lock.json  package.json
mobile-artist/: .gitignore  README.md  TESTFLIGHT.md  app.config.ts  app.json  babel.config.js  eas.json  (+2 more)
(+427 files in other folders)
